<resources>
    <string name="app_name">Unit_Converter</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="input_number_to_convert">Input number to convert</string>
    <string name="select_source_and_target_units">Select source and target units</string>
    <string name="source_unit">Source unit:</string>
    <string name="target_unit">Target unit:</string>
    <string name="convert">Convert</string>
    <string name="result">Result:</string>
    <string name="conversion_result_label">Result: %.2f</string>

    <string name="invalid_input_message">Invalid input. Please enter a valid number.</string>
    <string name="empty_input_message">Input is empty. Please enter a number.</string>







</resources>