<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:fillViewport="true"
    android:padding="0dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/app_title"
            style="@style/TitleStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/unit_converter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/user_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_input"
            app:srcCompat="@drawable/ic_user_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_input"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="90dp"
            android:hint="@string/input_number_to_convert"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/icon_user_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/app_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_conversion_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/conversion_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/conversion_question"
            app:srcCompat="@drawable/ic_conversion" />

        <TextView
            android:id="@+id/conversion_question"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="35dp"
            android:text="@string/select_source_and_target_units"
            app:layout_constraintStart_toEndOf="@id/icon_conversion_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_input" />

        <LinearLayout
            android:id="@+id/dropdown_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/conversion_question"
            app:layout_constraintTop_toBottomOf="@id/conversion_question"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/one"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source_unit" />

                <Spinner
                    android:id="@+id/source_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:popupBackground="@color/blue_dark"
                    tools:listitem="@layout/item_dropdown" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/two"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/target_unit" />

                <Spinner
                    android:id="@+id/target_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:popupBackground="@color/blue_dark"
                    tools:listitem="@layout/item_dropdown" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/convert_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/convert"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dropdown_menu" />

        <androidx.cardview.widget.CardView
            android:id="@+id/result_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convert_button">

            <TextView
                android:id="@+id/conversion_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/result"
                android:textColor="#000000"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>